--- a/nullplatform-login.yml
+++ b/nullplatform-login.yml
@@ -4,7 +4,6 @@ stages:
 variables:
   NULLPLATFORM_LOGIN_URL: "https://ci.nullplatform.com/login"
   NULLPLATFORM_LOGIN_HEADERS: "Content-Type: application/json"
-  NULLPLATFORM_LOGIN_BODY: "{\"api_key\": \"$NULLPLATFORM_APIKEY\"}"
 
 nullplatform-login:
   stage: nullplatform-login
@@ -13,7 +12,7 @@ nullplatform-login:
     - apt-get update
     - apt-get install -y openssl curl
   script:
-    - NULL_PLATFORM_LOGIN_RESPONSE=$(curl --http1.1 --retry 3 --retry-connrefused --retry-all-errors -X POST -H "$NULLPLATFORM_LOGIN_HEADERS" -d "$NULLPLATFORM_LOGIN_BODY" $NULLPLATFORM_LOGIN_URL)
+    - NULL_PLATFORM_LOGIN_RESPONSE=$(curl --http1.1 --retry 3 --retry-connrefused --retry-all-errors -X POST -H "$NULLPLATFORM_LOGIN_HEADERS" -d "{\"api_key\":\"$NULLPLATFORM_APIKEY\"}" $NULLPLATFORM_LOGIN_URL)
     - printf "%s" "$NULL_PLATFORM_LOGIN_RESPONSE" > nullplatform_login.response.json
     - openssl enc -iter 1000 -aes-256-cbc -salt -in nullplatform_login.response.json -out nullplatform_login.response.json.enc -k "$NULLPLATFORM_ENCRIPTION_KEY"
   artifacts:
