--- a/nullplaftorm-asset-docker-image-build-and-push.yml
+++ b/nullplaftorm-asset-docker-image-build-and-push.yml
@@ -2,8 +2,10 @@ stages:
   - nullplatform-asset-docker-image-build-and-push
 
 nullplatform-asset-docker-image-build-and-push:
-  image: docker:stable-dind
+  image: docker:stable
   stage: nullplatform-asset-docker-image-build-and-push
+  services:
+    - docker:dind
   before_script:
     - apk add --no-cache python3 py3-pip openssl
     - pip3 install --no-cache-dir awscli
