--- a/nullplaftorm-asset-docker-image-build-and-push-kaniko.yml
+++ b/nullplaftorm-asset-docker-image-build-and-push-kaniko.yml
@@ -2,10 +2,10 @@ stages:
   - nullplatform-asset-docker-image-build-and-push
 
 nullplatform-asset-docker-image-build-and-push:
-  image: docker:stable
+  image:
+    name: gcr.io/kaniko-project/executor:v1.14.0-debug
+    entrypoint: [""]
   stage: nullplatform-asset-docker-image-build-and-push
-  services:
-    - docker:dind
   before_script:
     - apk add --no-cache python3 py3-pip openssl
     - pip3 install --no-cache-dir awscli
@@ -21,6 +21,6 @@ nullplatform-asset-docker-image-build-and-push:
         echo $AWS_DEFAULT_REGION
         echo $AWS_SECRET_ACCESS_KEY
         aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REGISTRY
-        docker build -t $ASSET_URL .
+        /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $ASSET_URL
         docker push $ASSET_URL
       done < assets-to-create.txt
