--- a/nullplaftorm-asset-docker-image-build-and-push-kaniko.yml
+++ b/nullplaftorm-asset-docker-image-build-and-push-kaniko.yml
@@ -6,6 +6,9 @@ nullplatform-asset-docker-image-build-and-push:
     name: gcr.io/kaniko-project/executor:v1.14.0-debug
     entrypoint: [""]
   stage: nullplatform-asset-docker-image-build-and-push
+    before_script:
+      - apk update
+      - apk add --no-cache openssl
   script:
     - openssl enc -d -iter 1000 -aes-256-cbc -in assets-to-create.txt.enc -out assets-to-create.txt -k "$NULLPLATFORM_ENCRIPTION_KEY"
     - |+ 
