--- a/nullplaftorm-asset-docker-image-build-and-push-kaniko.yml
+++ b/nullplaftorm-asset-docker-image-build-and-push-kaniko.yml
@@ -7,16 +7,13 @@ nullplatform-asset-docker-image-build-and-push:
     entrypoint: [""]
   stage: nullplatform-asset-docker-image-build-and-push
   script:
+    -  mkdir -p /kaniko/.docker
+    -  echo "{\"credsStore\":\"ecr-login\"}" > /kaniko/.docker/config.json
     - |+ 
       while IFS= read -r line; do
         for env_var in $line 
         do
-          echo $env_var
           export "$env_var"
         done
-        echo $AWS_DEFAULT_REGION
-        echo $AWS_SECRET_ACCESS_KEY
-        aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REGISTRY
         /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $ASSET_URL
-        docker push $ASSET_URL
       done < assets-to-create.txt
