--- a/nullplaftorm-asset-docker-image-build-and-push-kaniko.yml
+++ b/nullplaftorm-asset-docker-image-build-and-push-kaniko.yml
@@ -1,3 +1,4 @@
+image: alpine:latest
 stages:
   - nullplatform-asset-docker-image-build-and-push
 
@@ -6,6 +7,8 @@ nullplatform-asset-docker-image-build-and-push:
     name: gcr.io/kaniko-project/executor:v1.14.0-debug
     entrypoint: [""]
   stage: nullplatform-asset-docker-image-build-and-push
+  before_script:
+    - apk add --no-cache openssl
   script:
     -  mkdir -p /kaniko/.docker
     -  echo "{\"credsStore\":\"ecr-login\"}" > /kaniko/.docker/config.json
