add default values to lamda build

--- a/nullplatform-asset-lambda-build-and-push.yml
+++ b/nullplatform-asset-lambda-build-and-push.yml
@@ -1,8 +1,11 @@
 spec:
   inputs:
     build-working-directory:
+      default: .
     asset-working-directory:
+      default: .
     asset-output-directory:
+      default: build
     asset-name:
       default: main
 
