add missing params

--- a/nullplatform-asset-lambda-build-and-push.yml
+++ b/nullplatform-asset-lambda-build-and-push.yml
@@ -2,6 +2,10 @@ spec:
   inputs:
     command:
       default: make
+    arguments:
+      default: build
+    options:
+      default: ''
     build-working-directory:
       default: .
     asset-working-directory:
