--- a/nullplatform-asset-lambda-build-and-push.yml
+++ b/nullplatform-asset-lambda-build-and-push.yml
@@ -50,7 +50,7 @@ nullplatform-asset-lambda-build-and-push:
       ASSET_OUTPUT_DIRECTORY="$asset-working-directory/$asset-output-directory"
       ASSET_NAME=$[[ inputs.asset-name ]]
       ASSET_TYPE=lamda
-      ASSET_TARGET_URL: ''
+      ASSET_TARGET_URL=''
       if [ "$[[ inputs.command ]]" != "make" ]; then
         echo "different of make"
       else
