--- a/nullplatform-asset-lambda-build-and-push.yml
+++ b/nullplatform-asset-lambda-build-and-push.yml
@@ -49,11 +49,13 @@ nullplatform-asset-lambda-build-and-push:
       ASSET_WORKING_DIRECTORY=$asset-working-directory
       ASSET_OUTPUT_DIRECTORY="$asset-working-directory/$asset-output-directory"
       ASSET_NAME=$[[ inputs.asset-name ]]
-      ASSET_TYPE=lamda
+      ASSET_TYPE=lambda
       ASSET_TARGET_URL=''
       if [ "$[[ inputs.command ]]" != "make" ]; then
         echo "different of make"
       else
+        echo $build-working-directory
+        echo $make_file_path
         make_file_path="$build-working-directory"
         make_file_task="build"
       
