--- a/nullplatform-asset-lambda-build-and-push.yml
+++ b/nullplatform-asset-lambda-build-and-push.yml
@@ -38,12 +38,13 @@ nullplatform-asset-lambda-build-and-push:
         # Remove trailing slashes
         path="${path%/}"
         echo "$path"
+        return $path
       }
       # Sanitize paths
       echo "$[[ inputs.build-working-directory ]]"
       build_working_directory=$(sanitize_path "$[[ inputs.build-working-directory ]]")
       asset_working_directory=$(sanitize_path "$[[ inputs.asset-working-directory ]]")
-      asset_output_directory=$(sanitize_path "$[[  inputs.asset-output-directory ]]")
+      asset_output_directory=$(sanitize_path "$[[ inputs.asset-output-directory ]]")
       echo $build-working-directory
     - |+ 
       #build
