--- a/nullplatform-asset-lambda-build-and-push.yml
+++ b/nullplatform-asset-lambda-build-and-push.yml
@@ -41,9 +41,9 @@ nullplatform-asset-lambda-build-and-push:
       }
       # Sanitize paths
       echo "$[[ inputs.build-working-directory ]]"
-      build_working_directory=$(sanitize_path "$[[ inputs.build-working-directory ]]")
-      asset_working_directory=$(sanitize_path "$[[ inputs.asset-working-directory ]]")
-      asset_output_directory=$(sanitize_path "$[[ inputs.asset-output-directory ]]")
+      build-working-directory=$(sanitize_path "$[[ inputs.build-working-directory ]]")
+      asset-working-directory=$(sanitize_path "$[[ inputs.asset-working-directory ]]")
+      asset-output-directory=$(sanitize_path "$[[ inputs.asset-output-directory ]]")
       echo "$build-working-directory"
     - |+ 
       #build
