--- a/nullplatform-asset-lambda-build-and-push.yml
+++ b/nullplatform-asset-lambda-build-and-push.yml
@@ -41,15 +41,15 @@ nullplatform-asset-lambda-build-and-push:
       }
       # Sanitize paths
       echo "$[[ inputs.build-working-directory ]]"
-      build-working-directory=$(sanitize_path "$[[ inputs.build-working-directory ]]")
-      asset-working-directory=$(sanitize_path "$[[ inputs.asset-working-directory ]]")
-      asset-output-directory=$(sanitize_path "$[[ inputs.asset-output-directory ]]")
-      echo "$build-working-directory"
+      build_working_directory=$(sanitize_path "$[[ inputs.build-working-directory ]]")
+      asset_working_directory=$(sanitize_path "$[[ inputs.asset-working-directory ]]")
+      asset_output_directory=$(sanitize_path "$[[ inputs.asset-output-directory ]]")
+      echo "$build_working_directory"
     - |+ 
       #build
-      BUILD_WORKING_DIRECTORY=$build-working-directory
-      ASSET_WORKING_DIRECTORY=$asset-working-directory
-      ASSET_OUTPUT_DIRECTORY="$asset-working-directory/$asset-output-directory"
+      BUILD_WORKING_DIRECTORY=$build_working_directory
+      ASSET_WORKING_DIRECTORY=$asset_working_directory
+      ASSET_OUTPUT_DIRECTORY="$asset_working_directory/$asset_output_directory"
       ASSET_NAME=$[[ inputs.asset-name ]]
       ASSET_TYPE=lambda
       ASSET_TARGET_URL=''
@@ -80,7 +80,7 @@ nullplatform-asset-lambda-build-and-push:
         ASSET_NAME=$ASSET_NAME \
         ASSET_TYPE=$ASSET_TYPE \
         ASSET_TARGET_URL=''
-      fi  
+      fi
     - openssl enc -d -iter 1000 -aes-256-cbc -in assets-to-create.txt.enc -out assets-to-create.txt -k "$NULLPLATFORM_ENCRIPTION_KEY"
     - |+ 
       #push
