--- a/nullplatform-asset-lambda-build-and-push.yml
+++ b/nullplatform-asset-lambda-build-and-push.yml
@@ -1,5 +1,7 @@
 spec:
   inputs:
+    ci-image:
+    ci-before-script:
     command:
       default: make
     arguments:
@@ -20,12 +22,10 @@ stages:
   - nullplatform-asset-lambda-build-and-push
 
 nullplatform-asset-lambda-build-and-push:
-  image: ubuntu:latest
+  image: $[[ inputs.ci-image ]]
   stage: nullplatform-asset-lambda-build-and-push
   before_script:
-    - apt-get update
-    - apt-get install -y python3 python3-pip openssl
-    - pip3 install --no-cache-dir awscli
+    - $[[ ci-before-script ]]
   script:
     - |+
       # Sanitize function
