--- a/nullplatform-asset-lambda-build-and-push.yml
+++ b/nullplatform-asset-lambda-build-and-push.yml
@@ -22,10 +22,10 @@ stages:
   - nullplatform-asset-lambda-build-and-push
 
 nullplatform-asset-lambda-build-and-push:
-  image: $[[ inputs.ci-image ]]
+  image: "$[[ inputs.ci-image ]]"
   stage: nullplatform-asset-lambda-build-and-push
   before_script:
-    - $[[ ci-before-script ]]
+    - "$[[ ci-before-script ]]"
   script:
     - |+
       # Sanitize function
