--- a/nullplatform-application-metadata.yml
+++ b/nullplatform-application-metadata.yml
@@ -8,10 +8,9 @@ variables:
 
 nullplatform-application-metadata:
   stage: nullplatform-application-metadata
-  image: ubuntu:latest
+  image: alpine:latest
   before_script:
-    - apt-get update
-    - apt-get install -y openssl curl jq
+    - apk add --no-cache openssl curl jq
     - openssl enc -d -iter 1000 -aes-256-cbc -in nullplatform_login.response.json.enc -out nullplatform_login.response.json -k "$NULLPLATFORM_ENCRIPTION_KEY"
     - ACCESS_TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
   script:
