--- a/nullplatform-build-finalize.yml
+++ b/nullplatform-build-finalize.yml
@@ -7,10 +7,9 @@ variables:
 
 nullplatform-build-finalize:
   stage: nullplatform-build-finalize
-  image: ubuntu:latest
+  image: alpine:latest
   before_script:
-    - apt-get update
-    - apt-get install -y openssl curl jq
+    - apk add --no-cache openssl curl jq
     - openssl enc -d -iter 1000 -aes-256-cbc -in nullplatform_login.response.json.enc -out nullplatform_login.response.json -k "$NULLPLATFORM_ENCRIPTION_KEY"
     - ACCESS_TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
   script:
