--- a/nullplatform-asset-lambda-build.yml
+++ b/nullplatform-asset-lambda-build.yml
@@ -75,8 +75,7 @@ nullplatform-asset-lambda-build:
         ASSET_WORKING_DIRECTORY=$ASSET_WORKING_DIRECTORY \
         ASSET_OUTPUT_DIRECTORY=$ASSET_OUTPUT_DIRECTORY \
         ASSET_NAME=$ASSET_NAME \
-        ASSET_TYPE=$ASSET_TYPE \
-        ASSET_TARGET_URL=''
+        ASSET_TYPE=$ASSET_TYPE
       fi
 
   artifacts:
