--- a/nullplatform-asset-lambda-push.yml
+++ b/nullplatform-asset-lambda-push.yml
@@ -66,6 +66,6 @@ nullplatform-asset-lambda-push:
           ASSET_WORKING_DIRECTORY=$ASSET_WORKING_DIRECTORY \
           ASSET_OUTPUT_DIRECTORY=$ASSET_OUTPUT_DIRECTORY \
           ASSET_NAME=$ASSET_NAME \
-          ASSET_TYPE=$ASSET_TYPE
+          ASSET_TYPE=$ASSET_TYPE \
           ASSET_TARGET_URL=$ASSET_URL
       done < assets-to-create.txt
