Add support for Azure repository provider with Docker and Kaniko

--- a/nullplaftorm-asset-docker-image-build-and-push-kaniko.yml
+++ b/nullplaftorm-asset-docker-image-build-and-push-kaniko.yml
@@ -8,12 +8,20 @@ nullplatform-asset-docker-image-build-and-push:
   stage: nullplatform-asset-docker-image-build-and-push
   script:
     -  mkdir -p /kaniko/.docker
-    -  echo "{\"credsStore\":\"ecr-login\"}" > /kaniko/.docker/config.json
     - |+ 
       while IFS= read -r line; do
         for env_var in $line 
         do
           export "$env_var"
         done
+        if [ "$ASSET_REPOSITORY_PROVIDER" == "aws-ecr" ]; then
+          echo "{\"credsStore\":\"ecr-login\"}" > /kaniko/.docker/config.json
+        elif [ "$ASSET_REPOSITORY_PROVIDER" == "azure-container-registry" ]; then
+          BUILD_AZURE_REGISTRY_AUTH_TOKEN=$(echo -n "$BUILD_AZURE_REGISTRY_USERNAME:$BUILD_AZURE_REGISTRY_PASSWORD" | base64)
+          echo "{\"auths\": {\"$BUILD_AZURE_REGISTRY_LOGIN_SERVER\": {\"auth\": \"$BUILD_AZURE_REGISTRY_AUTH_TOKEN\"}}}" > /kaniko/.docker/config.json
+        else
+          echo "Asset repository provider '$ASSET_REPOSITORY_PROVIDER' is not supported yet"
+          exit 1
+        fi
         /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $ASSET_URL
       done < assets-to-create.txt
