--- a/nullplatform-application-metadata.yml
+++ b/nullplatform-application-metadata.yml
@@ -2,6 +2,9 @@ stages:
   - nullplatform-application-metadata
 
 variables:
+  RUNNER_TAG: $RUNNER_TAG
+  NULLPLATFORM_API_KEY: $NULLPLATFORM_API_KEY
+  NULLPLATFORM_ENCRIPTION_KEY: $NULLPLATFORM_ENCRIPTION_KEY
   NULLPLATFORM_APPLICATION_METADATA_URL: "https://ci.nullplatform.com/application"
   NULLPLATFORM_APPLICATION_METADATA_PARAMS: "repository_url=$CI_PROJECT_URL"
   NULLPLATFORM_APPLICATION_METADATA_HEADERS: "Content-Type: application/json"
