--- a/nullplatform-asset-lambda-push.yml
+++ b/nullplatform-asset-lambda-push.yml
@@ -21,6 +21,11 @@ spec:
 stages:
   - nullplatform-asset-lambda-push
 
+variables:
+  RUNNER_TAG: $RUNNER_TAG
+  NULLPLATFORM_API_KEY: $NULLPLATFORM_API_KEY
+  NULLPLATFORM_ENCRIPTION_KEY: $NULLPLATFORM_ENCRIPTION_KEY
+
 nullplatform-asset-lambda-push:
   image: $[[ inputs.ci-image ]]
   stage: nullplatform-asset-lambda-push
