--- a/nullplatform-asset-docker-image-create-kaniko.yml
+++ b/nullplatform-asset-docker-image-create-kaniko.yml
@@ -24,7 +24,7 @@ nullplatform-asset-docker-image-create:
         APPLICATION_ID=$(echo "$line" | jq -r '.application_id')
         NULLPLATFORM_ASSET_CREATE_BODY="{\"type\":\"docker-image\",\"metadata\":{},\"name\":\"main\"}"
         NULLPLATFORM_ASSET_CREATE_RESPONSE=$(curl --http1.1 --retry 3 --retry-connrefused --retry-all-errors -X POST -H "$NULLPLATFORM_ASSET_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$NULLPLATFORM_ASSET_CREATE_BODY" $NULLPLATFORM_URL/build/$BUILD_ID/asset)
-        for target in $(echo "$NULLPLATFORM_ASSET_CREATE_RESPONSE" | jq -r '.targets[]'); do
+        for target in $(echo "$NULLPLATFORM_ASSET_CREATE_RESPONSE" | jq -rc '.targets[]'); do
           ASSET_URL=$(echo "$target" | jq -r '.url')
           ASSET_REPOSITORY_PROVIDER=$(echo "$target" | jq -r '.provider')
           NULLPLATFORM_APPLICATION_PARAMETERS=$(curl --http1.1 --retry 3 --retry-connrefused --retry-all-errors -H "Authorization:Bearer $ACCESS_TOKEN" $NULLPLATFORM_URL/application/$APPLICATION_ID/parameter)
