--- a/nullplaftorm-asset-docker-image-build-and-push-kaniko.yml
+++ b/nullplaftorm-asset-docker-image-build-and-push-kaniko.yml
@@ -20,10 +20,10 @@ nullplatform-asset-docker-image-build-and-push:
           export "$env_var"
         done
         if [ "$ASSET_REPOSITORY_PROVIDER" == "aws-ecr" ]; then
-          echo "{\"credsStore\":\"ecr-login\"}" > /kaniko/.docker/config.json
+          echo -n "{\"credsStore\":\"ecr-login\"}" > /kaniko/.docker/config.json
         elif [ "$ASSET_REPOSITORY_PROVIDER" == "azure-container-registry" ]; then
           BUILD_AZURE_REGISTRY_AUTH_TOKEN=$(echo -n "$BUILD_AZURE_REGISTRY_USERNAME:$BUILD_AZURE_REGISTRY_PASSWORD" | base64)
-          echo "{\"auths\": {\"$BUILD_AZURE_REGISTRY_LOGIN_SERVER\": {\"auth\": \"$BUILD_AZURE_REGISTRY_AUTH_TOKEN\"}}}" > /kaniko/.docker/config.json
+          echo -n "{\"auths\":{\"$BUILD_AZURE_REGISTRY_LOGIN_SERVER\":{\"auth\":\"$BUILD_AZURE_REGISTRY_AUTH_TOKEN\"}}}" > /kaniko/.docker/config.json
         else
           echo "Asset repository provider '$ASSET_REPOSITORY_PROVIDER' is not supported yet"
           exit 1
