--- a/nullplatform-asset-docker-image-create.yml
+++ b/nullplatform-asset-docker-image-create.yml
@@ -57,3 +57,5 @@ nullplatform-asset-docker-image-create:
       - nullplatform-asset-create.json
       - assets-to-create.txt.enc
     expire_in: 30 min
+  except:
+    - tags
