--- a/nullplaftorm-asset-docker-image-build-and-push.yml
+++ b/nullplaftorm-asset-docker-image-build-and-push.yml
@@ -15,7 +15,7 @@ nullplatform-asset-docker-image-build-and-push:
     - apk add --no-cache openssl
   script:
     - openssl enc -d -iter 1000 -aes-256-cbc -in assets-to-create.txt.enc -out assets-to-create.txt -k "$NULLPLATFORM_ENCRIPTION_KEY"
-    - |+ 
+    - |+
       while IFS= read -r line; do
         for env_var in $line 
         do
@@ -34,3 +34,5 @@ nullplatform-asset-docker-image-build-and-push:
         docker build -t $ASSET_URL .
         docker push $ASSET_URL
       done < assets-to-create.txt
+  except:
+    - tags
