--- a/nullplatform-asset-lambda-create.yml
+++ b/nullplatform-asset-lambda-create.yml
@@ -22,9 +22,9 @@ nullplatform-asset-lambda-create:
         BUILD_ID=$(echo "$line" | jq -r '.id')
         APPLICATION_ID=$(echo "$line" | jq -r '.application_id')
         NULLPLATFORM_ASSET_CREATE_BODY="{\"type\":\"lambda\",\"metadata\":{},\"name\":\"main\"}"
-        NULLPLATFORM_ASSET_CREATE_RESPONSE=$(curl --fail --verbose --http1.1 --retry 3 --retry-connrefused --retry-all-errors -X POST -H "$NULLPLATFORM_ASSET_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$NULLPLATFORM_ASSET_CREATE_BODY" $NULLPLATFORM_URL/build/$BUILD_ID/asset)
+        NULLPLATFORM_ASSET_CREATE_RESPONSE=$(curl --fail --http1.1 --retry 3 --retry-connrefused --retry-all-errors -X POST -H "$NULLPLATFORM_ASSET_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$NULLPLATFORM_ASSET_CREATE_BODY" $NULLPLATFORM_URL/build/$BUILD_ID/asset)
         for ASSET_URL in $(echo "$NULLPLATFORM_ASSET_CREATE_RESPONSE" | jq -r '.targets[].url'); do
-          NULLPLATFORM_APPLICATION_PARAMETERS=$(curl --fail --verbose --http1.1 --retry 3 --retry-connrefused --retry-all-errors -H "Authorization:Bearer $ACCESS_TOKEN" $NULLPLATFORM_URL/application/$APPLICATION_ID/parameter)
+          NULLPLATFORM_APPLICATION_PARAMETERS=$(curl --fail --http1.1 --retry 3 --retry-connrefused --retry-all-errors -H "Authorization:Bearer $ACCESS_TOKEN" $NULLPLATFORM_URL/application/$APPLICATION_ID/parameter)
           for parameter in $(echo "$NULLPLATFORM_APPLICATION_PARAMETERS" | jq -c '.[]'); do
             name=$(echo "$parameter" | jq -r '.name')
             value=$(echo "$parameter" | jq -r '.value')
@@ -46,3 +46,5 @@ nullplatform-asset-lambda-create:
       - nullplatform-asset-create.json
       - assets-to-create.txt.enc
     expire_in: 30 min
+  except:
+    - tags
