add default docker build

--- a/nullplatform-asset-docker-image-create-kaniko.yml
+++ b/nullplatform-asset-docker-image-create-kaniko.yml
@@ -44,8 +44,7 @@ nullplatform-asset-docker-image-create:
           elif [ "$ASSET_REPOSITORY_PROVIDER" == "azure-container-registry" ]; then
             FILE_LINE=$(echo "ASSET_URL=$ASSET_URL ASSET_REPOSITORY_PROVIDER=$ASSET_REPOSITORY_PROVIDER BUILD_AZURE_REGISTRY_LOGIN_SERVER=$BUILD_AZURE_REGISTRY_LOGIN_SERVER BUILD_AZURE_REGISTRY_USERNAME=$BUILD_AZURE_REGISTRY_USERNAME BUILD_AZURE_REGISTRY_PASSWORD=$BUILD_AZURE_REGISTRY_PASSWORD")
           else
-            echo "Asset repository provider '$ASSET_REPOSITORY_PROVIDER' is not supported yet"
-            exit 1
+            FILE_LINE=$(echo "ASSET_URL=$ASSET_URL BUILD_DOCKER_REGISTRY_SERVER=$BUILD_DOCKER_REGISTRY_SERVER BUILD_DOCKER_REGISTRY_USERNAME=$BUILD_DOCKER_REGISTRY_USERNAME BUILD_DOCKER_REGISTRY_PASSWORD=$BUILD_DOCKER_REGISTRY_PASSWORD")
           fi
           printf "%s %s %s %s %s\n" $FILE_LINE >> assets-to-create.txt
         done
