docker file as input

--- a/nullplaftorm-asset-docker-image-build-and-push-kaniko.yml
+++ b/nullplaftorm-asset-docker-image-build-and-push-kaniko.yml
@@ -1,3 +1,9 @@
+spec:
+  inputs:
+    dockerfile:
+      default: $CI_PROJECT_DIR/Dockerfile
+
+---
 stages:
   - nullplatform-asset-docker-image-build-and-push
 
@@ -28,7 +34,7 @@ nullplatform-asset-docker-image-build-and-push:
           BUILD_REGISTRY_AUTH_TOKEN=$(echo -n "$BUILD_DOCKER_REGISTRY_USERNAME:$BUILD_DOCKER_REGISTRY_PASSWORD" | base64 | tr -d \\n)
           echo -n "{\"auths\":{\"$BUILD_DOCKER_REGISTRY_SERVER\":{\"auth\":\"$BUILD_REGISTRY_AUTH_TOKEN\"}}}" > /kaniko/.docker/config.json
         fi
-        /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $ASSET_URL
+        /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $[[ inputs.dockerfile ]] --destination $ASSET_URL
       done < assets-to-create.txt
   except:
     - tags
