--- a/nullplatform-build-finalize.yml
+++ b/nullplatform-build-finalize.yml
@@ -22,13 +22,12 @@ nullplatform-build-finalize:
     - openssl enc -d -iter 1000 -aes-256-cbc -in nullplatform_login.response.json.enc -out nullplatform_login.response.json -k "$NULLPLATFORM_ENCRIPTION_KEY"
     - ACCESS_TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
   script:
-    - if [ "$CI_JOB_STATUS" = "success" ]; then
+    - |+
+      if [ "$CI_JOB_STATUS" = "success" ]; then
         BUILD_STATUS="successful";
       else
         BUILD_STATUS="failed";
       fi
-    - echo "Status: $status"
-    - |+
       while IFS= read -r line; do
         id=$(echo "$line" | jq -r '.id')
         NULLPLATFORM_BUILD_UPDATE_BODY="{\"status\":\"$BUILD_STATUS\"}"
