--- a/nullplatform-build-finalize.yml
+++ b/nullplatform-build-finalize.yml
@@ -31,5 +31,6 @@ nullplatform-build-finalize:
     paths:
       - nullplatform-build-finalize.json
     expire_in: 30 min
+  when: always
   except:
     - tags
