--- a/nullplatform-build-finalize.yml
+++ b/nullplatform-build-finalize.yml
@@ -1,9 +1,3 @@
-spec:
-  inputs:
-    status:
-      default: successful
-
----
 stages:
   - nullplatform-build-finalize
 
@@ -25,7 +19,7 @@ nullplatform-build-finalize:
     - |+
       while IFS= read -r line; do
         id=$(echo "$line" | jq -r '.id')
-        NULLPLATFORM_BUILD_UPDATE_BODY="{\"status\":\"$[[ inputs.status ]]\"}"
+        NULLPLATFORM_BUILD_UPDATE_BODY="{\"status\":\"successful\"}"
         NULLPLATFORM_BUILD_UPDATE_RESPONSE=$(curl --fail --http1.1 --retry 3 --retry-connrefused --retry-all-errors -X PATCH -H "$NULLPLATFORM_BUILD_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$NULLPLATFORM_BUILD_UPDATE_BODY" $NULLPLATFORM_BUILD_URL/$id)
         printf "%s\n" $NULLPLATFORM_BUILD_UPDATE_RESPONSE >> nullplatform-build-finalize.json
       done < nullplatform-build-create.json
@@ -35,3 +29,26 @@ nullplatform-build-finalize:
     expire_in: 30 min
   except:
     - tags
+
+nullplatform-build-finalize-failed:
+  stage: nullplatform-build-finalize
+  image: alpine:latest
+  before_script:
+    - apk add --no-cache openssl curl jq
+    - openssl enc -d -iter 1000 -aes-256-cbc -in nullplatform_login.response.json.enc -out nullplatform_login.response.json -k "$NULLPLATFORM_ENCRIPTION_KEY"
+    - ACCESS_TOKEN=$(cat nullplatform_login.response.json | jq -r '.access_token')
+  script:
+    - |+
+      while IFS= read -r line; do
+        id=$(echo "$line" | jq -r '.id')
+        NULLPLATFORM_BUILD_UPDATE_BODY="{\"status\":\"failed\"}"
+        NULLPLATFORM_BUILD_UPDATE_RESPONSE=$(curl --fail --http1.1 --retry 3 --retry-connrefused --retry-all-errors -X PATCH -H "$NULLPLATFORM_BUILD_HEADERS" -H "Authorization:Bearer $ACCESS_TOKEN" -d "$NULLPLATFORM_BUILD_UPDATE_BODY" $NULLPLATFORM_BUILD_URL/$id)
+        printf "%s\n" $NULLPLATFORM_BUILD_UPDATE_RESPONSE >> nullplatform-build-finalize.json
+      done < nullplatform-build-create.json
+  artifacts:
+    paths:
+      - nullplatform-build-finalize.json
+    expire_in: 30 min
+  except:
+    - tags
+  when: on_failure
